# GCOPE2PyGFM

./: .gitignore  GCOPE_INTEGRATION_NOTES.md  README.md  SUBMISSION_README.md  pyproject.toml
scripts/bridge/: README.md  finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/gcope/: README.md  ete.py  finetune.py  pretrain.py  prog.py
scripts/gcot/: README.md  finetune.py  finetune_graph.py  generate_downstream.py  nohup.out  pretrain.py  run_1shot_100task.py
scripts/graphgpt/: README.md  STAGE1_1GPU_README.md  STAGE2_1GPU_README.md  ensure_stage1_files.py  extract_graph_projector.py  model_download_links.md  prepare_data.py  prepare_models.py  prepare_models.sh  run_with_config.py
scripts/graphkeeper/: README.md  finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/graphmore/: README.md  finetune.py  finetune_graph.py  pretrain.py  run_experiments.py
scripts/graphprompt/: README.md  finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/graphtext/: README.md  run_icl.py  run_sft.py  run_with_config.py
scripts/graver/: README.md  finetune.py  finetune_graph.py  pretrain.py  run_1shot_100task.py
scripts/hgprompt/: README.md  finetune.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/llaga/: README.md  requirements-llaga-upstream.txt  run.py
scripts/mdgfm/: README.md  finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/mdgpt/: README.md  config_utils.py  finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/multigprompt/: README.md  example_cora.yaml  execute.py
scripts/oneforall/: README.md  run.py
scripts/rag_gfm/: README.md  build_corpus.py  build_motif_lib.py  finetune.py  finetune_graph.py  pretrain.py  pretrain_all.sh
scripts/sa2gfm/: README.md  _setup_repo.py  attack_metattack.py  attack_random.py  attack_targeted_nettack.py  attack_train_surrogate.py  detect.py  downstream.py  generate_fewshot.py  (+2 more)
tools/: bundle_scripts_for_wheel.py
(+422 files in other folders)
