[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gfm"
version = "0.1.7"
authors = [
  { name = "BUAA SKLCCSE", email = "your.email@example.com" },
]
description = "An AI copilot for graph data and models (Under active development)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.20",
  "pyyaml>=6",
]

# Optional ML / GFM stack (default target: Python 3.12, Linux x86_64, CUDA 12.8).
# Torch and PyG extension versions are pinned to match:
#   https://data.pyg.org/whl/torch-2.8.0+cu128.html
#
# Typical install:
#   pip install torch==2.8.0 --index-url https://download.pytorch.org/whl/cu128
#   pip install "python-gfm[torch]" -f https://data.pyg.org/whl/torch-2.8.0+cu128.html
#
# The -f URL is required so pip picks the +pt28cu128 wheels for torch-scatter / torch-sparse /
# torch-cluster / torch-spline-conv. CPU-only torch: use https://data.pyg.org/whl/torch-2.8.0+cpu.html
# and install torch from PyPI or the PyTorch CPU index instead.
[project.optional-dependencies]
torch = [
  "torch==2.8.0",
  "torch-geometric>=2.3.0",
  "torch-scatter==2.1.2",
  "torch-sparse==0.6.18",
  "torch-cluster==1.6.3",
  "torch-spline-conv==1.2.2",
  "scipy>=1.9.0",
  "transformers>=4.36.0",
  "joblib>=1.3.0",
  "scikit-learn>=1.3.0",
  "ftfy>=6.1.0",
  "regex>=2023.0.0",
  "accelerate>=0.26.0",
  "fschat>=0.2.36",
]
dev = ["pytest", "ruff"]
gcope = [
  "fastargs>=1.2.0",
  "torchmetrics>=1.0.0",
  "dgl>=1.1.0",
  "networkx>=3.0",
  "sympy>=1.12",
]

[project.scripts]
pygfm = "pygfm.cli.run_yaml:main"
gfm = "pygfm.cli.run_yaml:main"
gfm-sa2gfm-pretrain = "pygfm.cli.sa2gfm:pretrain_main"
gfm-sa2gfm-downstream = "pygfm.cli.sa2gfm:downstream_main"

[tool.setuptools.packages.find]
where = ["src", "scripts", "ckpts"]
include = ["pygfm*"]

# Ship scripts/ as a zip next to pygfm so ``pip install`` can run YAML without a git checkout.
[tool.setuptools.package-data]
pygfm = ["_scripts_bundle.zip"]
